# rusty_hue_controller

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.toml  bridge_info.json  index.html  token_file.txt
src/: hue_controller.rs  hue_web_controller.rs  lib.rs  main.rs
