[package]
name = "rusty_hue_controller"
version = "0.5.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hueclient = "0.4.2"
mac_address = "1.1.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
rocket = "0.5.0-rc.1"
futures-util = "0.3.17"
futures = "0.3.17"
mdns = "3.0.0"

[[bin]]
name = "register_hue"
path = "src/bin/register_hue.rs"
